# etl_foot_worldcup

./: .gitignore  LICENSE  README.md  dbt-doc.md  dbt_project.yml  pipeline.py  profiles.yml  pyproject.toml  requirements.txt
config/: db_config.example.yaml
data_clean/: matches_1930_2014_clean.csv  matches_1930_2014_clean.parquet  matches_1930_2022_clean.csv  matches_1930_2022_clean.parquet
docs/: kpi.md
models/: dim_city.sql  dim_edition.sql  dim_stadium.sql  dim_team.sql  fct_match.sql  schema.yml
notebooks/: 01_exploration_cleaning_1930_2014_v2.ipynb  04_merge_clean_datasets.ipynb  05_visualisation_kpi.ipynb  kpi_duckdb.ipynb
seeds/: schema.yml  world_cup_matches_2014.csv  worldcup_2018.csv  worldcup_2022.csv
sql/: quality_checks.sql  queries_kpi.sql
tests/: conftest.py  test_dbt_pipeline.py  test_dimensions.py  test_extract.py  test_match_table.py  test_transform_business_rules.py  test_transform_structure.py
